# its_raining

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  catholic_catechism.txt  encrypted_file.enc  fake_catechism.txt  fake_catechism_for_encryption.enc  fake_catechism_for_encryption.txt  output.enc  pretend_catechism.txt
.github/workflows/: c-cpp.yml  linux_ubuntu.yml  main.yml  msys_specific.yml  windows.yml  windows_msys.yml
example_text_files/: encrypted_file.enc
includes/raygui/src/: raygui.h
src/: config.h.in  main.c  memo.c  memo.h
